📝 content: obsidian commit

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -6,6 +6,8 @@ eleventyNavigation:
   order: 4
 ---
 
+<div id="graph"></div>
+
 {% set blog = collections.blog %}
 <ul class="[ flow ]">
   {%- for post in blog %}
