--- a/src/bookmarks.njk
+++ b/src/bookmarks.njk
@@ -6,6 +6,8 @@ eleventyNavigation:
   order: 8
 ---
 
+<div id="graph"></div>
+
 {% set bookmarks = collections.bookmarks %}
 <ul class="[ flow ]">
   {%- for bookmark in bookmarks %}
