--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -407,6 +407,7 @@ menu {
 @import "blocks/emoji";
 @import "blocks/feed-block";
 @import "blocks/footer";
+@import "blocks/graph";
 @import "blocks/hero";
 @import "blocks/home";
 @import "blocks/icon-button";
