--- a/src/garden.njk
+++ b/src/garden.njk
@@ -8,6 +8,8 @@ eleventyNavigation:
 
 <p>A collection of my ideas that I'm nurturing out in the open. The notes range from seedlings, which are fresh out of my mind, to budding, which are developing, to evergreen, which are polished ideas.</p>
 
+<div id="graph"></div>
+
 {% set notes = collections.garden %}
 <ul class="[ flow ]">
   {%- for note in notes %}
