--- a/src/projects.njk
+++ b/src/projects.njk
@@ -8,6 +8,8 @@ navToHtmlOptions:
   showExcerpt: true
 ---
 
+<div id="graph"></div>
+
 {% set projects = collections.projects %}
 <ul class="[ flow ]">
   {%- for project in projects %}
