--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
 		{# <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/style.css">
 		<link rel="stylesheet" media="(prefers-color-scheme: light)" href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/light.css"> #}
+
 		<script>
 			// if there's a color-scheme id in localstorage, use it, if not use auto.
 			document
@@ -37,6 +38,15 @@
 									? "sl-theme-light"
 									: "sl-theme-dark");
 		</script>
+
+		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
+		<script type="module" src="/@input/js/main.js" defer></script>
+		{% if page.url === "/" %}
+			<script type="module" src="/@input/js/spline.js" defer></script>
+		{% endif %}
+		{% if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" %}
+			<script type="module" src="/@input/js/force-graph.js" defer></script>
+		{% endif %}
 	</head>
 	<body>
 		<a class="[ skip-link ] [ button ]" href="#content">Skip to content</a>
@@ -49,8 +59,5 @@
 		</main>
 
 		{% include "footer.njk" %}
-
-		<!-- Include scripts here. Concatenate & minify for performance: https://developers.google.com/speed/docs/insights/MinifyResources -->
-		<script type="module" src="/@input/js/main.js"></script>
 	</body>
 </html>
