--- a/src/api/graph.json.njk
+++ b/src/api/graph.json.njk
@@ -1,4 +1,5 @@
 ---
+eleventyExcludeFromCollections: true
 permalink: '/public/api/graph.json'
 ---
 {{ collections.allPostTypes | linkGraph | dump | safe }}
