--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -45,7 +45,7 @@
 			<script type="module" src="/@input/js/spline.js" defer></script>
 		{% endif %}
 		{% if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" %}
-			<script type="module" src="/@input/js/force-graph.js" defer></script>
+			<script type="module" src="/@input/js/graph.js" defer></script>
 		{% endif %}
 	</head>
 	<body>
