📝 content: obsidian commit

--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -44,7 +44,7 @@
 		{% if page.url === "/" %}
 			<script type="module" src="/@input/js/spline.js" defer></script>
 		{% endif %}
-		{% if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" %}
+		{% if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" or page.url === "/til/" or page.url === "/til/d3/" %}
 			<script type="module" src="/@input/js/graph.js" defer></script>
 		{% endif %}
 	</head>
