--- a/src/css/blocks/_toc.scss
+++ b/src/css/blocks/_toc.scss
@@ -13,3 +13,26 @@
     }
   }
 }
+
+.toc-container {
+  & > details {
+    & > summary {
+      align-items: center;
+      gap: var(--size-3);
+
+      & > sl-icon::part(base) {
+        transition: transform 300ms var(--ease-out-4);
+        color: var(--accent-solid);
+      }
+
+      &:is(:hover, :focus-visible) {
+        & > sl-icon::part(base) {
+          color: var(--accent-solid-hover);
+        }
+      }
+    }
+    &[open] > summary > sl-icon::part(base) {
+      transform: rotate(90deg);
+    }
+  }
+}
