📝 content: obsidian commit

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -389,11 +389,8 @@ menu {
 //// Utilities
 @import "utilities/content-width";
 @import "utilities/detitlify";
-@import "utilities/flex-col";
-@import "utilities/flex";
+@import "utilities/layout";
 @import "utilities/flow";
-@import "utilities/grid";
-@import "utilities/inline";
 @import "utilities/panel";
 @import "utilities/radius";
 @import "utilities/recursive-flow";
