--- a/src/css/utilities/_typography.scss
+++ b/src/css/utilities/_typography.scss
@@ -5,3 +5,10 @@
 .text-decoration-none {
   text-decoration: none;
 }
+
+.move-link-styling-to-child {
+  & > span {
+    text-decoration: underline;
+    text-decoration-skip-ink: auto;
+  }
+}
