--- a/src/layouts/base-without-header.njk
+++ b/src/layouts/base-without-header.njk
@@ -20,6 +20,8 @@
 		{# <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/style.css">
 		<link rel="stylesheet" media="(prefers-color-scheme: light)" href="https://unpkg.com/prism-theme-night-owl@1.4.0/build/light.css"> #}
 
+		<link href="https://github.com/ellyloel" rel="me">
+
 		<script>
 			// if there's a color-scheme id in localstorage, use it, if not use auto.
 			document
