--- a/src/layouts/post.njk
+++ b/src/layouts/post.njk
@@ -1,18 +1,19 @@
 ---
 layout: base-without-header.njk
 ---
-
 <header>
 	<h1>{{ title }}</h1>
 	<p>
-		<sl-icon library="fa" name="far-calendar-plus" label="Last modified"></sl-icon>
+		<sl-tooltip content="Last modified">
+			<sl-icon class="[ emoji ]" library="fa" name="far-calendar-plus" label="Last modified"></sl-icon>
+		</sl-tooltip>
 		<time class="[ date ]" datetime="{{ page.date | dateToISO }}">{{ page.date | dateToLocaleDateFull }}</time>
 	</p>
 </header>
 <aside class="[ toc-container ][ flow content-width ]">
 	<details>
 		<summary class="[ flex ]">
-			<sl-icon library="fa" name="fas-play" label=""></sl-icon>
+			<sl-icon class="[ emoji ]" library="fa" name="fas-play" label=""></sl-icon>
 			<h2>Table of contents</h2>
 		</summary>
 		{{ content | toc | safe }}
@@ -21,11 +22,11 @@ layout: base-without-header.njk
 <article class="[ flow content-width ]">
 	{{ content | safe }}
 </article>
-{% if backlinks === [] %}
+{%- if backlinks === [] -%}
 	<aside class="[ flow content-width ]">
 		<h2>Backlinks</h2>
 		<ul class="[ flow ]">
-			{% for link in backlinks %}
+			{%- for link in backlinks -%}
 				<li>
 					<details>
 						<summary>
@@ -37,12 +38,34 @@ layout: base-without-header.njk
 						</a>
 					</details>
 				</li>
-			{% endfor %}
+			{%- endfor -%}
 		</ul>
 	</aside>
-{% endif %}
+{%- endif -%}
 <footer>
 	<p>
-		Share on <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url.substring(1) }}&text="{{ title }}" by @ellyloel'>Twitter</a>.
+		Share on <a href='https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url.substring(1) }}&text="{{ title }}" by @ellyloel'>Twitter</a> or <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ site.url }}{{ page.url.substring(1) }}">LinkedIn</a>.
 	</p>
 </footer>
+{%- set previousPost = collections.allPostTypes | getPreviousCollectionItem -%}
+{%- set nextPost = collections.allPostTypes | getNextCollectionItem -%}
+{%- if previousPost or nextPost -%}
+	<div class="[ flex gap-5 ]">
+		{%- if previousPost -%}
+			<sl-tooltip content="{{ previousPost.data.title }}">
+				<a href="{{ previousPost.url }}" class="[ text-decoration-none move-link-styling-to-child flex align-center gap-1 ]">
+					<sl-icon class="[ emoji ]" library="fa" name="fas-angle-left" label=""></sl-icon>
+					<span>Previous Post</span>
+				</a>
+			</sl-tooltip>
+		{%- endif -%}
+		{%- if nextPost -%}
+			<sl-tooltip content="{{ nextPost.data.title }}">
+				<a href="{{ nextPost.url }}" class="[ text-decoration-none move-link-styling-to-child flex align-center gap-1 ]">
+					<span>Next Post</span>
+					<sl-icon class="[ emoji ]" library="fa" name="fas-angle-right" label=""></sl-icon>
+				</a>
+			</sl-tooltip>
+		{%- endif -%}
+	</div>
+{%- endif -%}
