--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -43,3 +43,8 @@ generateManifest = false %}
 <link type="application/atom+xml" rel="alternate" href="{{ site.url }}feed.atom" title="{{ site.title }}">
 <link type="application/rss+xml" rel="alternate" href="{{ site.url }}feed.rss" title="{{ site.title }}">
 <link type="application/json" rel="alternate" href="{{ site.url }}feed.json" title="{{ site.title }}">
+
+{# Webmentions #}
+<link href="https://github.com/ellyloel" rel="me">
+<link rel="webmention" href="https://webmention.io/www.ellyloel.com/webmention"/>
+<link rel="pingback" href="https://webmention.io/www.ellyloel.com/xmlrpc"/>
