--- a/src/css/utilities/_flow.scss
+++ b/src/css/utilities/_flow.scss
@@ -1,3 +1,7 @@
 .flow > * + * {
   margin-block-start: var(--flow-space, 1em);
 }
+
+.flow-space-setter > * + * {
+  --flow-space: var(--flow-space-setter);
+}
