📝 content: obsidian commit

--- a/src/layouts/post.njk
+++ b/src/layouts/post.njk
@@ -72,4 +72,6 @@ layout: base-without-header.njk
 	{%- endif -%}
 	{%- set currentPostMentionCount = webmentions | webmentionCountForPage -%}
 	{%- set currentPostMentions = webmentions | webmentionsForPage -%}
+	<h2>{{ currentPostMentionCount }} Responses</h2>
+	{{ currentPostMentions | safe }}
 </footer>
