--- a/src/css/blocks/_lego.scss
+++ b/src/css/blocks/_lego.scss
@@ -1,8 +1,35 @@
-.lego {
-  height: 300px !important;
-  width: 300px !important;
+.lego-container {
+  height: 300px;
+  width: 300px;
   object-fit: cover;
-  transform: scale(1.5);
-  opacity: 0;
-  transition: opacity 1s var(--ease-1);
+  border-radius: var(--radius-blob-4);
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    var(--accent-bg) 0%,
+    var(--accent-solid) 90%
+  );
+  transform: scale(0.75);
+
+  & > canvas,
+  & > picture > img {
+    height: 300px !important;
+    width: 300px !important;
+    object-fit: cover;
+  }
+
+  & > canvas {
+    display: none;
+    transform: scale(1.4);
+  }
+  & > picture > img {
+    display: block;
+    transform: scale(1.2);
+  }
+
+  @media (--md-n-above) {
+    & > canvas {
+      display: block;
+      visibility: hidden;
+    }
+  }
 }
