--- a/src/includes/webmentions.njk
+++ b/src/includes/webmentions.njk
@@ -1,34 +1,32 @@
 {%- set postMentions = webmentions | webmentionsForPage -%}
 <article id="webmentions" class="webmentions">
-	<header class="webmentions__header">
+	<header class="[ webmentions__header ][ flow ]">
 		<h2>
 			{{ postMentions.total }} Response{%- if (postMentions.total !== 1) -%}s{%- endif -%}
 		</h2>
-		<p>
-			<form action="https://webmention.io/{{ site.domain }}/webmention" method="post" class="form-webmention">
-				<label for="form-webmention-source" class="webmentions__form-label">
+		<form action="https://webmention.io/{{ site.url }}webmention" method="post" class="[ form-webmention ][ flow ]">
+			<label for="form-webmention-source" class="webmentions__form-label">
 					Have you published your own post mentioning this one? Let me know the URL:
 				</label>
-				<div class="webmentions__field-wrapper">
-					<input
+			<div class="webmentions__field-wrapper">
+				<input
 						id="form-webmention-source"
 						type="url"
 						name="source"
 						placeholder="https://example.com"
 						required="required"
 						class="webmentions__form-field">
-					<input type="hidden" name="target" value="{{ site.url }}{{ page.url }}">
-					<input type="submit" value="Send" class="webmentions__form-submit"></div>
-			</form>
-		</p>
-		<p>
+				<input type="hidden" name="target" value="{{ site.url }}{{ page.url.substring(1) }}">
+				<input type="submit" value="Send" class="webmentions__form-submit"></div>
+		</form>
+		<small>
 			Powered by
-			<a href="https://indieweb.org/Webmention" target="_blank" rel="external noopener noreferrer">Webmentions</a>
+			<a href="https://indieweb.org/Webmention">Webmentions</a>
 			via
-			<a href="https://webmention.io" target="_blank" rel="external noopener noreferrer">Webmention.io</a>
+			<a href="https://webmention.io">Webmention.io</a>
 			and
-			<a href="https://brid.gy" target="_blank" rel="external noopener noreferrer">Bridgy</a>
-		</p>
+			<a href="https://brid.gy">Bridgy</a>
+		</small>
 	</header>
 	{%- ifAsync postMentions.likes.length -%}
 	<h3>
