--- a/src/feeds/feed.json.njk
+++ b/src/feeds/feed.json.njk
@@ -14,7 +14,7 @@
     "url": "{{ site.author.url }}"
   },
   "items": [
-    {%- for post in collections.all | reverse %}
+    {%- for post in collections.allPostTypes | reverse %}
   {%- set absolutePostUrl = post.url | absoluteUrl(site.url) %}
     {
       "id": "{{ absolutePostUrl }}",
