📝 content: obsidian commit

--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -23,7 +23,7 @@ overlayTag = tag %}
 
 {# Style #}
 <meta name="color-scheme" content="dark light">
-<meta name="theme-color" content="hsl(269deg 75% 58%)">
+<meta name="theme-color" content="hsl(269, 75, 58)">
 
 {# Open Graph #}
 <meta property="og:site_name" content="{{ site.title }}">
