--- a/src/css/blocks/_card.scss
+++ b/src/css/blocks/_card.scss
@@ -4,7 +4,7 @@
   box-shadow: var(--shadow-offset) var(--shadow-offset) 0px 0px
     var(--accent-bg-hover);
   border-radius: var(--radius-3);
-  transition: box-shadow 300ms var(--ease-1);
+  transition: box-shadow 300ms var(--ease-1), opacity 0.5s var(--ease-2);
 
   &:is(:hover, :focus-within) {
     --shadow-offset: var(--size-2);
