--- a/src/css/blocks/unfurl.css
+++ b/src/css/blocks/unfurl.css
@@ -32,7 +32,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    overflow: hidden; // truncating
+    overflow: hidden; /* truncating */
   }
   & picture,
   & .unfurl__image {
