--- a/src/css/utilities/panel.css
+++ b/src/css/utilities/panel.css
@@ -1,4 +1,4 @@
-// Adds consitent space and padding for each full panel section
+/* Adds consitent space and padding for each full panel section */
 .panel {
   margin: var(--size-7) 0;
   padding: var(--size-7) 0;
