--- a/src/feeds/notes.json.njk
+++ b/src/feeds/notes.json.njk
@@ -1,6 +1,19 @@
----
-  permalink: /public/notes.json
-  eleventyExcludeFromCollections: true
+---json
+{
+  "permalink": "/public/notes.json",
+  "eleventyExcludeFromCollections": true,
+  "site": {
+    "title": "Elly Loel",
+    "description": "This is my own lovely little corner of the internet. Look forward to plenty of interesting ideas & projects.",
+    "lang": "en",
+    "url": "https://ellyloel.com/",
+    "author": {
+      "name": "Elly Loel",
+      "email": "hello@ellyloel.com",
+    	"url": "https://ellyloel.com/about/"
+    }
+  }
+}
 ---
 {
   "version": "https://jsonfeed.org/version/1.1",
