--- a/src/css/blocks/skip-link.css
+++ b/src/css/blocks/skip-link.css
@@ -1,7 +1,7 @@
 .skip-link {
   position: fixed;
   inset-block-start: var(--size-3);
-  // inset-inline-start: 50%;
+  /* inset-inline-start: 50%; */
   left: 50%;
   transform: translateX(-50%);
   z-index: var(--layer-5);
@@ -16,8 +16,15 @@
     backdrop-filter: blur(8px);
   }
 
-  // @extends should be used with care, but this is a great example of them being hella useful
   &:not(:focus) {
-    @extend .visually-hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: auto;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
   }
 }
