--- a/src/feeds/articles.rss.njk
+++ b/src/feeds/articles.rss.njk
@@ -1,6 +1,19 @@
----
-  permalink: /public/articles.rss
-  eleventyExcludeFromCollections: true
+---json
+{
+  "permalink": "/public/articles.rss",
+  "eleventyExcludeFromCollections": true,
+  "site": {
+    "title": "Elly Loel",
+    "description": "This is my own lovely little corner of the internet. Look forward to plenty of interesting ideas & projects.",
+    "lang": "en",
+    "url": "https://ellyloel.com/",
+    "author": {
+      "name": "Elly Loel",
+      "email": "hello@ellyloel.com",
+    	"url": "https://ellyloel.com/about/"
+    }
+  }
+}
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ site.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
