--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -44,11 +44,11 @@ appleIconBgColor = '#00000000',
 generateManifest = false %}
 
 {# RSS Feed #}
-<link type="application/atom+xml" rel="alternate" href="{{ site.url }}feed.atom" title="{{ site.title }}">
-<link type="application/rss+xml" rel="alternate" href="{{ site.url }}feed.rss" title="{{ site.title }}">
-<link type="application/json" rel="alternate" href="{{ site.url }}feed.json" title="{{ site.title }}">
+<link type="application/atom+xml" rel="alternate" href="{{ site.url }}/feed.atom" title="{{ site.title }}">
+<link type="application/rss+xml" rel="alternate" href="{{ site.url }}/feed.rss" title="{{ site.title }}">
+<link type="application/json" rel="alternate" href="{{ site.url }}/feed.json" title="{{ site.title }}">
 
 {# Webmentions #}
 <link href="https://github.com/ellyloel" rel="me">
-<link rel="webmention" href="https://webmention.io/{{ site.url }}webmention"/>
-<link rel="pingback" href="https://webmention.io/{{ site.url }}xmlrpc"/>
+<link rel="webmention" href="https://webmention.io/{{ site.url }}/webmention"/>
+<link rel="pingback" href="https://webmention.io/{{ site.url }}/xmlrpc"/>
