--- a/src/includes/webmentions.njk
+++ b/src/includes/webmentions.njk
@@ -4,7 +4,7 @@
 		<h2>
 			{{ postMentions.total }} Response{%- if (postMentions.total !== 1) -%}s{%- endif -%}
 		</h2>
-		<form action="https://webmention.io/{{ site.url }}webmention" method="post" class="[ form-webmention ][ flow ]">
+		<form action="https://webmention.io/{{ site.url }}/webmention" method="post" class="[ form-webmention ][ flow ]">
 			<label for="form-webmention-source" class="webmentions__form-label">
 					Have you published your own post mentioning this one? Let me know the URL:
 				</label>
@@ -16,7 +16,7 @@
 						placeholder="https://example.com"
 						required="required"
 						class="webmentions__form-field">
-				<input type="hidden" name="target" value="{{ site.url }}{{ page.url.substring(1) }}">
+				<input type="hidden" name="target" value="{{ site.url }}{{ page.url }}">
 				<input type="submit" value="Send" class="webmentions__form-submit"></div>
 		</form>
 		<small>
