--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -2,6 +2,7 @@
 layout: base-without-header.njk
 ---
 <header>
+	{%- include "breadcrumb.njk" -%}
 	<h1>{{ title }}</h1>
 </header>
 <article class="[ flow ]">
