📝 content: obsidian commit

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@
 @import "./utilities/content-width.css";
 @import "./utilities/detitlify.css";
 @import "./utilities/layout.css";
+@import "./utilities/no-width.css";
 @import "./utilities/flow.css";
 @import "./utilities/panel.css";
 @import "./utilities/radius.css";
