--- a/src/css/global.css
+++ b/src/css/global.css
@@ -101,7 +101,7 @@ em {
   color: var(--accent-text);
 }
 
-/* Code
+/* Code */
 
 code,
 kbd,
@@ -248,6 +248,8 @@ figure {
 
 figure > figcaption {
   font-size: var(--font-size-1);
+  text-align: center;
+  font-style: italic;
 }
 
 /* Blockquote */
