📝 content: obsidian commit

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,7 @@
 /* Blocks */
 @import "./blocks/breadcrumb.css";
 @import "./blocks/button.css";
+@import "./blocks/callout.css";
 @import "./blocks/card.css";
 @import "./blocks/date.css";
 @import "./blocks/emoji.css";
