📝 content: obsidian commit

--- a/src/css/blocks/callout.css
+++ b/src/css/blocks/callout.css
@@ -1,4 +1,4 @@
-.note {
+.callout {
   background-color: var(--accent-bg-subtle);
   border: var(--border-size-2) solid var(--accent-border);
   border-radius: var(--radius-3);
