--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -5,6 +5,6 @@ layout: base-without-header.njk
 	{%- include "breadcrumb.njk" -%}
 	<h1>{{ title }}</h1>
 </header>
-<article class="[ flow ]">
+<article class="[ markdown-container ][ flow ]">
 	{{ content | safe }}
 </article>
