--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,7 @@
 @import "./blocks/icon-button.css";
 @import "./blocks/lego.css";
 @import "./blocks/logo.css";
+@import "./blocks/markdown-container.css";
 @import "./blocks/nav.css";
 @import "./blocks/newsletter.css";
 @import "./blocks/site-head.css";
